[ Unity Cloud ] Build Test - 4

--- a/3rd-Party-Library/Assets/Plugins/Android/youtube_lib/build.gradle
+++ b/3rd-Party-Library/Assets/Plugins/Android/youtube_lib/build.gradle
@@ -29,6 +29,7 @@ android {
  
     compileSdkVersion 28
     buildToolsVersion '28.0.1'
+    multiDexEnabled true
     defaultConfig {
         targetSdkVersion 28
         consumerProguardFiles 'proguard.txt'
