--- a/3rd-Party-Library/Assets/Plugins/Android/youtube_lib/AndroidManifest.xml
+++ b/3rd-Party-Library/Assets/Plugins/Android/youtube_lib/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk android:minSdkVersion="9" />
     
     <application>
+      android:name="android.support.multidex.MultiDexApplication" >
     </application>
 
 </manifest>
