--- a/3rd-Party-Library/Assets/Plugins/Android/mainTemplate.gradle
+++ b/3rd-Party-Library/Assets/Plugins/Android/mainTemplate.gradle
@@ -31,6 +31,20 @@ android {
         abortOnError false
     }
 
+buildTypes {
+        debug {
+ minifyEnabled true
+ useProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-unity.txt'**USER_PROGUARD**
+            jniDebuggable true
+        }
+        release {
+ minifyEnabled true
+ useProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-unity.txt'**USER_PROGUARD**
+        }
+    }
+
     aaptOptions {
         ignoreAssetsPattern = "!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~"
     }**PACKAGING_OPTIONS**
