--- a/3rd-Party-Library/Packages/manifest.json
+++ b/3rd-Party-Library/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
+    "com.unity.mobile.notifications": "1.0.3",
     "com.unity.purchasing": "2.0.6",
     "com.unity.test-framework": "1.1.11",
     "com.unity.textmeshpro": "2.0.1",
